--- a/ImageDownloader/Podfile
+++ b/ImageDownloader/Podfile
@@ -7,6 +7,7 @@ target 'ImageDownloader' do
 
   # Pods for ImageDownloader
   pod 'Masonry'
+  pod 'SSZipArchive'
 
   target 'ImageDownloaderTests' do
     inherit! :search_paths
